@@ -44,6 +44,7 @@
    - BalanceRender: improve appearance of header notes (todo #1191).
    - OpeTemplate: make the treeview sortable (todo #1200).
    - Reconciliation: improve display and automated proposals.
+   - Reconciliation: add debit and credit soldes, change back summary color (todo #1195).
    - RecurrentModel: allow to be duplicated (todo #1206).
    - RecurrentModel: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
    - RecurrentNew: managed as a singleton (todo #1213).
